--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ html{
     width: 100%;
 }
 .a{
+
     background-color: #fff;
 }
 .b{
@@ -39,6 +40,7 @@ html{
     justify-content: center;
 }
 .d{
+    margin-top: 5%;
     background-color: white;
 }
 .d h1{
@@ -54,7 +56,7 @@ html{
 .c h1{
     display:flexbox;
 
-    padding-top: 5%;
+    padding-top: 10%;
     padding-bottom: 5%;
     margin-bottom: 0%;
     text-align: center;
@@ -129,7 +131,7 @@ html{
     width: 100%;
     height: 100%;
     background: #fff;
-    font-size: 275px;
+    font-size: 200px;
     text-align: center;
     text-transform: uppercase;
     color: #000;
@@ -261,7 +263,7 @@ html{
 
 .container {
     
-  margin-left: 25%;
+    margin-left: 25%;
   width: 50%;
   background-color: #ddd; 
 }
@@ -298,10 +300,13 @@ html{
 .f h1{
     font-family: monospace;
     padding-bottom: 5%;
+    font-size: 28px;
     text-align: center;
 }
-
-
+.f p{
+    font-family: monospace;
+    font-size: 15px;
+}
 .flip-card {
     background-color: transparent;
     width: 300px;
