--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ html{
 }
 .b{
     position: relative;
-    width:100%;
-    height: 100vh;
+    padding-top: 12%;
+    padding-bottom: 12%;
     display: flex;
     align-items: center;
     text-align: center;
@@ -122,7 +122,7 @@ html{
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    
 }
 .front h1{
     position: absolute;
@@ -174,13 +174,13 @@ html{
 }
 .navbar a{
     font-family: monospace;
-    font-size: 20px;
+    font-size: 17px;
     color: #808080;
     text-decoration: none;
     margin-top: 200px;
     font-weight:700;
-    margin-left: 20px;
-    margin-right: 50px;
+    margin-left: 10px;
+    margin-right: 30px;
     transition: .5s;
 }
 .navbar a:hover{
@@ -255,7 +255,8 @@ html{
 
 }
 .e p{
-    margin-right: 40%;
+    margin-left: 25%;
+    text-align: left;
     font-family: monospace;
 }
 * {box-sizing:border-box}
@@ -269,7 +270,7 @@ html{
 }
 
 .skills {
-    font-family: monospace;
+  font-family: monospace;
   text-align: right; 
   padding-top: 10px; 
   padding-bottom: 10px; 
@@ -300,12 +301,12 @@ html{
 .f h1{
     font-family: monospace;
     padding-bottom: 5%;
-    font-size: 28px;
+    font-size: 20px;
     text-align: center;
 }
 .f p{
     font-family: monospace;
-    font-size: 15px;
+    font-size: 13px;
 }
 .flip-card {
     background-color: transparent;
