--- a/index.css
+++ b/index.css
@@ -47,10 +47,19 @@ html{
 }
 .g{
     z-index: 6;
+    background-image: linear-gradient(
+        -20deg,
+      
+        black 40%,
+        #605b6e 35%,
+        #242426 55%,
+        black 55%,
+        black 80%
+        );
 }
 .d{
     z-index: 7;
-    margin-top: 5%;
+    
     background-color: white;
 }
 .d h1{
@@ -253,7 +262,7 @@ html{
     font-family: monospace;
     padding-bottom: 10%;
     background-image: linear-gradient(
-  35deg,
+  32deg,
 
   black 40%,
   #605b6e 40%,
@@ -440,6 +449,18 @@ html{
         transform: scale(1.2);
     }
 }
+.birthstone-bounce-regular {
+    font-family: "Birthstone Bounce", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .birthstone-bounce-medium {
+    font-family: "Birthstone Bounce", cursive;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
 
 /*.i3:hover{
     scale: 1.5;
@@ -463,12 +484,15 @@ html{
     justify-content: space-between;
 }
 .g h1{
+    font-family: "Birthstone Bounce", cursive;
+    font-weight: 400;
+    font-style: normal;
     text-align: right;
     padding-right: 15%;
     padding-top: 10%;
     padding-bottom: 5%;
     color: white;
-    font-size: 80px;
+    font-size: 100px;
     font-weight: 700;
 }
 
